images and testimoniasl updated

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
     <meta
       name="description"
-      content="Quintin Pearson's personal website portfolio, describing some aspects of Quintin not all knew about."
+      content="Quintin Pearson's personal website portfolio, also showing some of the services provided as a freelancer."
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Links -->
 
-    <link rel="icon" href="img/logo-2.png" />
+    <link rel="icon" href="img/logo-2.webp" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,13 +26,13 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="queries.css" />
 
-    <title>Quintin &mdash; A Portfolio</title>
+    <title>Quintin Pearson &mdash; Web Developer</title>
   </head>
   <body>
     <header class="header">
       <a href="#">
         <img
-          src="img/logo-2.png"
+          src="img/logo-2.webp"
           alt="Quintin Pearson's Logo"
           class="logo"
           width="24"
@@ -44,7 +44,9 @@
           <li><a href="#about" class="main-nav-link">about</a></li>
           <li><a href="#work" class="main-nav-link">portfolio</a></li>
           <li><a href="#expertise" class="main-nav-link">services</a></li>
-          <li><a href="#services" target="_blank"></a></li>
+          <li>
+            <a href="#services" target="_blank" rel="noopener noreferrer"></a>
+          </li>
         </ul>
       </nav>
 
@@ -157,7 +159,7 @@
             </ul>
           </div>
         </div>
-        <h3 class="services-other services-more">Other Services</h3>
+        <h4 class="services-other services-more">Other Services</h4>
         <div class="services-grid grid grid--3-cols">
           <div class="services-items">
             <h3>IT support</h3>
@@ -214,11 +216,15 @@
 
       <div class="work-grid grid grid--2-cols container">
         <div class="site-img">
-          <a target="_blank" href="https://quintinpearson.github.io/Candyshop/">
+          <a
+            target="_blank"
+            rel="noopener noreferrer"
+            href="https://quintinpearson.github.io/Candyshop/"
+          >
             <img
               width="300"
               height="300"
-              src="img/recent-1 (1).png"
+              src="img/recent-1.webp"
               alt="The museum of candy website displayed on a laptop"
             />
           </a>
@@ -227,7 +233,7 @@
           <a target="_blank" href="https://quintinpearson.github.io/Candyshop/">
             <img
               class="work-logos"
-              src="img/candy-logo.png"
+              src="img/candy-logo.webp"
               alt="The Museum of candy logo"
           /></a>
           <p class="site-description">
@@ -239,10 +245,11 @@
           <a
             href="https://quintinpearson.github.io/online-delivery/"
             target="_blank"
+            rel="noopener noreferrer"
           >
             <img
               class="work-logos"
-              src="img/omnifood-logo.png"
+              src="img/omnifood-logo.webp"
               alt="Omnifood's logo"
               width="430"
               height="57"
@@ -258,11 +265,12 @@
           <a
             href="https://quintinpearson.github.io/online-delivery/"
             target="_blank"
+            rel="noopener noreferrer"
           >
             <img
               width="300"
               height="300"
-              src="img/recent-2 (1).png"
+              src="img/recent-2.webp"
               alt="The Omnifood website displayed on a laptop"
             />
           </a>
@@ -277,13 +285,17 @@
           /></a>
         </div>
         <div class="site-description-box">
-          <a href="https://boldcollection.co/" target="_blank">
+          <a
+            href="https://boldcollection.co/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <img
               class="work-logos"
               src="img/bold-logo.webp"
               alt="Bold Collection's logo"
               width="227"
-              height="200"
+              height="auto"
           /></a>
           <p class="site-description">
             Bold is a proudly Namibian based graphic design agency. Our goals
@@ -296,6 +308,7 @@
         <a
           href="https://github.com/QuintinPearson"
           target="_blank"
+          rel="noopener noreferrer"
           class="github-btn"
           >see more on github
           <span
@@ -316,35 +329,40 @@
           <div class="slide-row" id="slide">
             <div class="slide-col">
               <div class="testimonial-client">
-                <p class="testimonial-author">Alicia</p>
+                <p class="testimonial-author">GJ Oosthuizen</p>
                 <img
                   width="260"
-                  height="230"
+                  height="auto"
                   class="testimonial-img"
-                  src="img/bold-logo.webp"
-                  alt=" Bold collection logo"
+                  src="img/faraday-logo.webp"
+                  alt="Faraday services logo"
                 />
-                <p class="testimonial-company">Bold</p>
+                <p class="testimonial-company">Faraday Services</p>
               </div>
               <blockquote class="testimonial-box">
                 <p class="testimonial-text">
-                  " Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Tempore earum, neque sint, voluptatum vero, corporis quas
-                  recusandae nostrum quae nemo accusamus quis."
+                  "We have used Quintin for various odd jobs in the past and he
+                  has quickly become our go-to for any IT-related issues. His
+                  response time is quick, he provides neat work and is always
+                  available to answer questions and give suggestions. He does
+                  not give up until he finds a solution, even with the toughest
+                  jobs – he has brought more than one of our old and forgotten
+                  PC’s back to life. Thank you Quintin, for your affordable and
+                  quality service."
                 </p>
               </blockquote>
             </div>
             <div class="slide-col">
               <div class="testimonial-client">
-                <p class="testimonial-author">Alicia</p>
+                <p class="testimonial-author">Alicia du Plessis</p>
                 <img
                   width="260"
-                  height="230"
+                  height="auto"
                   class="testimonial-img"
                   src="img/bold-logo.webp"
                   alt=" Bold collection logo"
                 />
-                <p class="testimonial-company">Bold</p>
+                <p class="testimonial-company">Bold Collection</p>
               </div>
               <blockquote class="testimonial-box">
                 <p class="testimonial-text">
@@ -360,21 +378,26 @@
             </div>
             <div class="slide-col">
               <div class="testimonial-client">
-                <p class="testimonial-author">Jan Pierewiet</p>
+                <p class="testimonial-author">Mervin Wiggle</p>
                 <img
                   width="260"
-                  height="230"
+                  height="auto"
                   class="testimonial-img"
-                  src="img/bold-logo.webp"
-                  alt=" Bold collection logo"
+                  src="img/synapse-logo.webp"
+                  alt="Synapse's logo"
                 />
-                <p class="testimonial-company">Big Business</p>
+                <p class="testimonial-company">Synapse</p>
               </div>
               <blockquote class="testimonial-box">
                 <p class="testimonial-text">
-                  " Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Tempore earum, neque sint, voluptatum vero, corporis quas
-                  recusandae nostrum quae nemo accusamus quis."
+                  " Quintin Pearson has been employed as a Support Technician
+                  with us from the 2nd of November 2020 to the 13th of July
+                  2021. We have been consistently impressed by his "can do"
+                  attitude while taking on all tasks with a positive energy.
+                  Quintin’s interpersonal and communication skills have allowed
+                  him to develop Productive working relationships with both our
+                  clients and our staff. Quintin possesses the skills required
+                  to diagnose problems and devise viable solutions."
                 </p>
               </blockquote>
             </div>
@@ -456,7 +479,7 @@
     <footer class="footer">
       <a href="#">
         <img
-          src="img/logo-2.png"
+          src="img/logo-2.webp"
           alt="Quintin Pearson's logo"
           class="logo footer-logo"
         />
