seperate folder added for contact page

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </p>
         <div class="hero-btn-box">
           <a href="#work" class="work-btn">view my work</a>
-          <a href="contact.html" class="contact-btn">contact me</a>
+          <a href="/contact/contact.html" class="contact-btn">contact me</a>
         </div>
       </div>
     </section>
@@ -203,7 +203,9 @@
         </div>
         <div class="services-contact-box">
           <p>need something else?</p>
-          <a href="contact.html" class="contact-btn services-contact-btn"
+          <a
+            href="/contact/contact.html"
+            class="contact-btn services-contact-btn"
             >contact me</a
           >
         </div>
