--- a/contact/contact.html
+++ b/contact/contact.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="icon" href="/img/logo-2.webp" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Contact Quintin</title>
 
     <link rel="stylesheet" href="style.css" />
@@ -13,7 +23,7 @@
     <header class="header">
       <a href="index.html">
         <img
-          src="img/logo-2.png"
+          src="/img/logo-2.webp"
           alt="Quintin Pearson's Logo"
           class="logo logo--contact-pg"
           width="24"
@@ -84,7 +94,7 @@
     <footer class="footer">
       <a href="index.html">
         <img
-          src="img/logo-2.png"
+          src="/img/logo-2.webp"
           alt="Quintin Pearson's logo"
           class="logo footer-logo"
         />
@@ -136,6 +146,20 @@
       </p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="contact.js"></script>
+
+    <script
+      defer
+      src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
+    ></script>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
